crates/pcb-zen-core/tests/snapshots/interface__interface_promotion_error_messages.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Error: test.zen:24:11-40 Expected 'Power', received: [Uart, Usart]
