crates/pcb-zen-core/tests/snapshots/interface__interface_transitive_promotion.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
=== Control Interface ===
{
  "Interface": {
    "fields": {
      "reset": {
        "Net": {
          "id": 8,
          "name": "CTRL",
          "properties": {},
          "type_name": "Net"
        }
      }
    },
    "promotion_by_type": {
      "Net": "reset",
      "Control": ""
    }
  }
}
=== Power Interface (with transitive to Control and Net) ===
{
  "Interface": {
    "fields": {
      "NET": {
        "Net": {
          "id": 9,
          "name": "PWR",
          "properties": {},
          "type_name": "Net"
        }
      },
      "voltage": {
        "String": "3.3V"
      }
    },
    "promotion_by_type": {
      "Net": "NET",
      "Power": ""
    }
  }
}
=== UART Interface (no promotions) ===
{
  "Interface": {
    "fields": {
      "TX": {
        "Net": {
          "id": 10,
          "name": "UART_UART_TX",
          "properties": {},
          "type_name": "Net"
        }
      },
      "RX": {
        "Net": {
          "id": 11,
          "name": "UART_UART_RX",
          "properties": {},
          "type_name": "Net"
        }
      }
    },
    "promotion_by_type": {
      "Uart": ""
    }
  }
}
=== System Interface (multiple transitive paths) ===
{
  "Interface": {
    "fields": {
      "power": {
        "Interface": {
          "fields": {
            "NET": {
              "Net": {
                "id": 12,
                "name": "SYS_power",
                "properties": {},
                "type_name": "Net"
              }
            },
            "voltage": {
              "String": "3.3V"
            }
          },
          "promotion_by_type": {
            "Net": "NET",
            "Power": ""
          }
        }
      },
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 13,
                "name": "SYS_uart_UART_TX",
                "properties": {},
                "type_name": "Net"
              }
            },
            "RX": {
              "Net": {
                "id": 14,
                "name": "SYS_uart_UART_RX",
                "properties": {},
                "type_name": "Net"
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      }
    },
    "promotion_by_type": {
      "Power": "power",
      "Net": "power.NET",
      "Uart": "uart",
      "ValidSystem": ""
    }
  }
}
Module {
    name: "<root>",
    source: "test.zen",
}
[]
