crates/pcb-zen-core/tests/snapshots/interface__interface_using_serialization_roundtrip.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
=== Original Instance ===
{
  "Interface": {
    "fields": {
      "power": {
        "Interface": {
          "fields": {
            "NET": {
              "Net": {
                "id": 7,
                "name": "ORIGINAL_power_VCC",
                "properties": {}
              }
            },
            "voltage": {
              "String": "3.3V"
            }
          },
          "promotion_by_type": {
            "Net": "NET",
            "Power": ""
          }
        }
      },
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 8,
                "name": "ORIGINAL_uart_UART_TX",
                "properties": {}
              }
            },
            "RX": {
              "Net": {
                "id": 9,
                "name": "ORIGINAL_uart_UART_RX",
                "properties": {}
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      }
    },
    "promotion_by_type": {
      "Power": "power",
      "Net": "power.NET",
      "Uart": "uart",
      "System": ""
    }
  }
}
=== Deserialized Instance ===
{
  "Interface": {
    "fields": {
      "power": {
        "Interface": {
          "fields": {
            "NET": {
              "Net": {
                "id": 7,
                "name": "ORIGINAL_power_VCC",
                "properties": {}
              }
            },
            "voltage": {
              "String": "3.3V"
            }
          },
          "promotion_by_type": {
            "Net": "NET",
            "Power": ""
          }
        }
      },
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 8,
                "name": "ORIGINAL_uart_UART_TX",
                "properties": {}
              }
            },
            "RX": {
              "Net": {
                "id": 9,
                "name": "ORIGINAL_uart_UART_RX",
                "properties": {}
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      }
    },
    "promotion_by_type": {
      "Power": "power",
      "Net": "power.NET",
      "Uart": "uart",
      "System": ""
    }
  }
}
=== Comparison ===
Original: System(power=using(Power(NET=using(Net { name: "ORIGINAL_power_VCC", id: "<ID>", symbol: Value(NoneType) }), voltage="3.3V")), uart=using(Uart(RX=Net { name: "ORIGINAL_uart_UART_RX", id: "<ID>", symbol: Value(NoneType) }, TX=Net { name: "ORIGINAL_uart_UART_TX", id: "<ID>", symbol: Value(NoneType) })))
Deserialized: System(power=using(Power(NET=using(Net { name: "ORIGINAL_power_VCC", id: "<ID>", symbol: Value(NoneType) }), voltage="3.3V")), uart=using(Uart(RX=Net { name: "ORIGINAL_uart_UART_RX", id: "<ID>", symbol: Value(NoneType) }, TX=Net { name: "ORIGINAL_uart_UART_TX", id: "<ID>", symbol: Value(NoneType) })))
=== Both factories still work ===
New from original factory: {
  "Interface": {
    "fields": {
      "power": {
        "Interface": {
          "fields": {
            "NET": {
              "Net": {
                "id": 10,
                "name": "NEW_ORIGINAL_power_VCC",
                "properties": {}
              }
            },
            "voltage": {
              "String": "3.3V"
            }
          },
          "promotion_by_type": {
            "Net": "NET",
            "Power": ""
          }
        }
      },
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 11,
                "name": "NEW_ORIGINAL_uart_UART_TX",
                "properties": {}
              }
            },
            "RX": {
              "Net": {
                "id": 12,
                "name": "NEW_ORIGINAL_uart_UART_RX",
                "properties": {}
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      }
    },
    "promotion_by_type": {
      "Power": "power",
      "Net": "power.NET",
      "Uart": "uart",
      "System": ""
    }
  }
}
New from deserialized factory: {
  "Interface": {
    "fields": {
      "power": {
        "Interface": {
          "fields": {
            "NET": {
              "Net": {
                "id": 13,
                "name": "NEW_DESERIALIZED_power_VCC",
                "properties": {}
              }
            },
            "voltage": {
              "String": "3.3V"
            }
          },
          "promotion_by_type": {
            "Net": "NET",
            "Power": ""
          }
        }
      },
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 14,
                "name": "NEW_DESERIALIZED_uart_UART_TX",
                "properties": {}
              }
            },
            "RX": {
              "Net": {
                "id": 15,
                "name": "NEW_DESERIALIZED_uart_UART_RX",
                "properties": {}
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      }
    },
    "promotion_by_type": {
      "Power": "power",
      "Net": "power.NET",
      "Uart": "uart",
      "System": ""
    }
  }
}
Module {
    name: "<root>",
    source: "test.zen",
}
[]
